--- a/country/main.css
+++ b/country/main.css
@@ -35,7 +35,12 @@ header a {
     color: red;
     margin: 2%;
 }
-
+a:active{
+    color: red;
+    border: solid 1px;
+    border-radius: 100%;
+    
+}
 #nav-country {
     color: white;
     background-color: #00000000;
@@ -51,13 +56,17 @@ header a {
 header a:hover {
     text-decoration: none;
     color: red;
+    background-color:#134d13 ;
+    border-radius: 5px;
 }
 
 main {
     font-family: 'Bellota', cursive;
     font-size: 16px;
 }
-
+a{
+    text-align: center;
+}
 footer {
     width: 100%;
     height: auto;
@@ -70,16 +79,21 @@ footer {
     color: white;
     text-align: center;
 }
-
+.dre{
+    width: 32px;
+    border-radius: 5px;
+}
 footer a {
     text-decoration: none;
     font-size: 15px;
-    color: white;
+    color: #c2c2c2;
 }
 
 footer a:hover {
     text-decoration: none;
-    color: red;
+    color: green;
+  
+
 }
 
 footer p {
