--- a/country/main.css
+++ b/country/main.css
@@ -141,3 +141,6 @@ a:hover{
         background: linear-gradient(0deg, rgba(219, 13, 32, 1) 0%, rgba(219, 13, 32, 1) 33%, rgba(1, 141, 233, 1) 33%, rgba(1, 141, 233, 1) 67%, rgba(255, 255, 255, 1) 67%, rgba(255, 255, 255, 1) 100%);
     }
 }
+.wer{
+    overflow-x: auto; 
+}
