--- a/404/style.css
+++ b/404/style.css
@@ -1,3 +1,4 @@
 body, html{
-    background: url("/political-na-postsovet-space/country/russia/4f03ad960b11c5859d1039cf3fd1d1dc.jpg");
+    background: url("/political-na-postsovet-space/country/russia/Lubyanka_Building.jpg");
+    background-size: 100%;
 }
