--- a/putin/style.css
+++ b/putin/style.css
@@ -1,9 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Bellota&family=Rubik+Mono+One&family=Ruslan+Display&family=Stalinist+One&display=swap');
 html, body {
-    background: url("/political-na-postsovet-space/country/russia/4f03ad960b11c5859d1039cf3fd1d1dc.jpg");
-    background-image: 100%;
+    background: url("/political-na-postsovet-space/country/russia/Lubyanka_Building.jpg");
+    background-size: 100%;
     background-attachment: fixed;
-    background-repeat: no-repeat;
+
     border-radius: 50px;
 }
 
