--- a/country/russia/css/style.css
+++ b/country/russia/css/style.css
@@ -12,7 +12,7 @@
 body, html {
     font-family: Arial, Helvetica, sans-serif;
     text-align: auto;
-    background-color: black;
+ 
     font-size: 15px;
     height: 100%;
 }
@@ -262,4 +262,36 @@ img {
 .russika-kyxna{
     text-decoration: underline;
 color: black;
+}
+footer {
+    width: 100%;
+    height: auto;
+    display: flex;
+    background: #343c50;
+    justify-content: space-around;
+    align-items: center;
+    flex-wrap: wrap;
+    font-family: 'Bellota', cursive;
+    color: white;
+    text-align: center;
+}
+.dre{
+    width: 32px;
+    border-radius: 1px;
+}
+footer a {
+    text-decoration: none;
+    font-size: 15px;
+    color: #c2c2c2;
+}
+
+footer a:hover {
+    text-decoration: none;
+    color: green;
+   
+
+}
+
+footer p {
+    text-indent: 0px;
 }
