--- a/country/main-ru.css
+++ b/country/main-ru.css
@@ -83,9 +83,7 @@ a{
 footer {
     width: 100%;
     height: auto;
-    
-       
-    
+    background: #343c50;
     display: flex;
     justify-content: space-around;
     align-items: center;
