--- a/country/main.css
+++ b/country/main.css
@@ -154,5 +154,6 @@ table{
 table .flagi{
     width: 20px;
     border-radius: 0px;
+    border: 0.1px solid black;
 }
 table td {height: 30px; vertical-align: center;} /* выравнивание по верхней границе ячейки */
