--- a/country/style.css
+++ b/country/style.css
@@ -31,11 +31,13 @@ p {
 h1 {
     margin-left: 20%;
     margin-right: 20%;
+    text-align: center;
 }
 
 h2 {
     margin-left: 20%;
     margin-right: 20%;
+    text-align: center;
 }
 
 h3 {
