--- a/country/russia/css/style.css
+++ b/country/russia/css/style.css
@@ -149,10 +149,11 @@ img {
 }
 
 .president {
-    color: white;
-    background: rgb(51, 51, 51);
+    color: #000;
+    background: rgb(214,39,24);
+    background: linear-gradient(0deg, rgba(214,39,24,1) 0%, rgba(143,44,74,1) 33%, rgba(0,54,167,1) 33%, rgba(0,54,167,1) 67%, rgba(255,255,255,1) 67%, rgba(255,255,255,1) 100%);
     border-radius: 40px;
-    animation: presid 5s infinite;
+  
     display: flex;
     justify-content: space-around;
     align-items: center;
@@ -165,6 +166,7 @@ img {
     border-radius: 20px;
     border: solid 1px;
     padding: 10px;
+  
 }
 
 @keyframes presid {
@@ -213,7 +215,16 @@ img {
     border: solid 5px;
     border-color: red;
     width: 250px;
-    animation: prewe 5s infinite;
+ 
+}
+.pres:hover {
+    border-radius: 20px;
+    border: solid 5px;
+    border-color: red;
+    width: 250px;
+    transform: translateY(-25px);
+    transition: 1s;
+ 
 }
 
 @keyframes prewe {
