--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ body, html {
 
 header {
     color: white;
-    background-color: #155a15;
+    background: #155a15;
     width: 100%;
     height: auto;
     display: flex;
@@ -21,6 +21,28 @@ header {
     justify-content: space-around;
     align-items: center;
     flex-wrap: wrap;
+    animation: bipolar 15s infinite;
+}
+
+@keyframes bipolar {
+    0% {
+        background: #155a15;
+    }
+    25% {
+        background: rgb(0, 175, 102);
+        background: linear-gradient(0deg, rgba(0, 175, 102, 1) 50%, rgb(156, 29, 36) 50%);
+    }
+    50% {
+        background: rgb(214, 39, 24);
+        background: linear-gradient(0deg, rgba(214, 39, 24, 1) 0%, rgba(143, 44, 74, 1) 33%, rgba(0, 54, 167, 1) 33%, rgba(0, 54, 167, 1) 67%, rgba(255, 255, 255, 1) 67%, rgba(255, 255, 255, 1) 100%);
+    }
+    75% {
+        background: rgb(255, 214, 0);
+        background: linear-gradient(0deg, rgba(255, 214, 0, 1) 0%, rgba(255, 214, 0, 1) 50%, rgba(0, 91, 188, 1) 50%, rgba(0, 91, 188, 1) 100%);
+    }
+    100% {
+        background: #155a15;
+    }
 }
 
 header div {
@@ -67,9 +89,9 @@ header a:hover {
 main {
     background: rgb(120, 121, 9);
     background: linear-gradient(90deg, rgba(120, 121, 9, 1) 0%, rgba(122, 0, 0, 1) 100%);
-    color: white;
     width: 100%;
     height: auto;
+    color: #fff;
 }
 
 main p {
@@ -125,8 +147,8 @@ footer a:hover {
 }
 
 img {
-    border-radius: 20px;
-    width: 100%;
+
+    width: 100px;
 }
 
 #ussr {
