--- a/country/kazakhstan/style.css
+++ b/country/kazakhstan/style.css
@@ -19,7 +19,7 @@ body, html {
 
 
 main {
-    background: rgb(145, 27, 16);
+    background: #0299b1;
    
     color: white;
     width: 100%;
@@ -208,6 +208,6 @@ img {
 }
 
 audio::-webkit-media-controls-panel {
-    background: rgb(83, 15, 8);
+    background: #00b1cb;
    
 }
