--- a/country/ussr/style.css
+++ b/country/ussr/style.css
@@ -211,3 +211,7 @@ audio::-webkit-media-controls-panel {
     background: rgb(83, 15, 8);
    
 }
+.redr{
+    width: 75px;
+    border-radius: 1px;
+}
