--- a/for-users/contacts/style.css
+++ b/for-users/contacts/style.css
@@ -6,7 +6,10 @@
 body, html {
     font-family: Arial, Helvetica, sans-serif;
     text-align: auto;
-    background-color: black;
+    background: url("/political-na-postsovet-space/country/russia/67wIjCtV13VF2Q_h4s5mPeTYw9k.jpg");
+    background-image: 100%;
+    background-attachment: fixed;
+    background-repeat: no-repeat;
     font-size: 15px;
     height: 100%;
 }
@@ -87,11 +90,16 @@ header a:hover {
 }
 
 main {
-    background: rgb(9,94,121);
-    background: linear-gradient(90deg, rgba(9,94,121,1) 0%, rgba(0,22,36,1) 100%);
+   
         color: white;
     width: 100%;
     height: auto;
+
+}
+.infoburo{
+    text-align: center;
+    background: #f5f5f549;
+    border-radius: 30px;
 }
 
 p {
@@ -127,23 +135,44 @@ hr {
 footer {
     width: 100%;
     height: auto;
-    background: #dad9d9;
+    background: #343c5073;
     display: flex;
     justify-content: space-around;
     align-items: center;
     flex-wrap: wrap;
+    font-family: 'Bellota', cursive;
+    color: white;
+    text-align: center;
 }
-
+.dre{
+    width: 32px;
+    border-radius: 1px;
+}
 footer a {
     text-decoration: none;
     font-size: 15px;
-    color: #3d3d3d;
+    color: #c2c2c2;
 }
 
 footer a:hover {
     text-decoration: none;
-    color: red;
+    color: green;
+   
+
 }
+
+footer p {
+    text-indent: 0px;
+}
+
+
+
+a:hover{
+    transition: 0.5s;
+    border-radius: 10px;
+    border: solid 1px;
+}
+
 
 .photo {
     float: right;
@@ -279,4 +308,7 @@ ul a{
 }
 ul a:hover{
     margin: 0%;
+}
+.logo{
+    width: 32px;
 }
