--- a/for-users/files/style.css
+++ b/for-users/files/style.css
@@ -6,7 +6,10 @@
 body, html {
     font-family: Arial, Helvetica, sans-serif;
     text-align: auto;
-    background-color: black;
+    background: url("/political-na-postsovet-space/country/russia/67wIjCtV13VF2Q_h4s5mPeTYw9k.jpg");
+    background-image: 100%;
+    background-attachment: fixed;
+    background-repeat: no-repeat;
     font-size: 15px;
     height: 100%;
 }
@@ -87,8 +90,7 @@ header a:hover {
 }
 
 main {
-    background: rgb(9,94,121);
-    background: linear-gradient(90deg, rgba(9,94,121,1) 0%, rgba(0,22,36,1) 100%);
+ 
         color: white;
     width: 100%;
     height: auto;
