--- a/for-users/contacts/style.css
+++ b/for-users/contacts/style.css
@@ -98,7 +98,7 @@ main {
 }
 .infoburo{
     text-align: center;
-    background: #f5f5f549;
+    background: #b1b1b149;
     border-radius: 30px;
 }
 
@@ -140,7 +140,7 @@ footer {
     justify-content: space-around;
     align-items: center;
     flex-wrap: wrap;
-    font-family: 'Bellota', cursive;
+    font-family:Arial, Helvetica, sans-serif;
     color: white;
     text-align: center;
 }
