--- a/country/style.css
+++ b/country/style.css
@@ -99,8 +99,12 @@ div a:hover {
 .president {
     color: white;
     text-align: center;
-    background: linear-gradient(to top right, rgb(51, 0, 0), rgb(55, 9, 9), rgb(58, 9, 9), rgb(62, 8, 8), rgb(65, 42, 8), rgb(81, 8, 8), rgb(8, 72, 98), rgb(8, 76, 114), rgb(8, 79, 130), rgb(7, 83, 146), rgb(7, 86, 163), rgb(7, 90, 179));
-    ;
+  /*  background: linear-gradient(to top right, rgb(51, 0, 0), rgb(55, 9, 9), rgb(58, 9, 9), rgb(62, 8, 8), rgb(65, 42, 8), rgb(81, 8, 8), rgb(8, 72, 98), rgb(8, 76, 114), rgb(8, 79, 130), rgb(7, 83, 146), rgb(7, 86, 163), rgb(7, 90, 179));
+    ;*/
+    background: url("/political-na-postsovet-space/country/russia/67wIjCtV13VF2Q_h4s5mPeTYw9k.jpg");
+    background-image: 100%;
+    background-attachment: fixed;
+    background-repeat: no-repeat;
     border: solid 5px;
     border-radius: 40px;
     border-bottom-color: green;
