--- a/country/main-ru.css
+++ b/country/main-ru.css
@@ -1,5 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Bellota&family=Rubik+Mono+One&family=Ruslan+Display&family=Stalinist+One&display=swap');
-
+@import url("fonts/roboto/stylesheet.css");
 header {
     color: rgb(0, 0, 0);
     background-color: #ffffff;
@@ -10,7 +10,9 @@ header {
     justify-content: space-around;
     align-items: center;
     flex-wrap: wrap;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: 'Yandex Sans Display';
+    font-weight: bold;
+    font-style: normal;
 }
 
 header div {
@@ -24,34 +26,39 @@ header div {
     align-items: center;
     flex-wrap: wrap;
 }
-header div a{
+
+header div a {
     text-decoration: none;
-    color:white;
+    color: white;
 }
-header div a:hover{
+
+header div a:hover {
     text-decoration: none;
-    color:white;
+    color: white;
 }
+
 header a {
     text-decoration: none;
     color: rgb(0, 0, 0);
     margin: 2%;
 }
+
 #id {
     text-decoration: none;
     color: red;
     margin: 2%;
 }
-a:active{
+
+a:active {
     color: red;
     border: solid 1px;
     border-radius: 10px;
-    
 }
+
 .nav-country {
     color: white;
     background: #d62718;
-    background: linear-gradient(0deg, rgba(214,39,24,1) 0%, rgba(143,44,74,1) 100%);
+    background: linear-gradient(0deg, rgba(214, 39, 24, 1) 0%, rgba(143, 44, 74, 1) 100%);
     width: 100%;
     height: auto;
     display: flex;
@@ -60,26 +67,33 @@ a:active{
     align-items: center;
     flex-wrap: wrap;
 }
+
 .nav-country a:hover {
     text-decoration: none;
-    color:white;
+    color: white;
 }
+
 header a:hover {
     text-decoration: none;
     color: red;
 }
 
 main {
-    font-family: 'Bellota', cursive;
+    font-family: 'Yandex Sans Text';
+    font-weight: 500;
+    font-style: normal;
     font-size: 16px;
 }
-a{
+
+a {
     text-align: center;
     margin: 1%;
 }
-.derf{
+
+.derf {
     color: white;
 }
+
 footer {
     width: 100%;
     height: auto;
@@ -92,10 +106,12 @@ footer {
     color: white;
     text-align: center;
 }
-.dre{
+
+.dre {
     width: 32px;
     border-radius: 1px;
 }
+
 footer a {
     text-decoration: none;
     font-size: 15px;
@@ -105,17 +121,13 @@ footer a {
 footer a:hover {
     text-decoration: none;
     color: green;
-   
-
 }
 
 footer p {
     text-indent: 0px;
 }
 
-
-
-a:hover{
+a:hover {
     transition: 0.5s;
     border-radius: 10px;
     border: solid 1px;
