--- a/country/russia/css/style.css
+++ b/country/russia/css/style.css
@@ -21,9 +21,8 @@ main {
     color: black;
     width: 100%;
     height: auto;
-    font-family: 'Yandex Sans Text';
-    font-weight: 500;
-    font-style: normal;
+    font-family: 'Bellota', cursive;
+    font-size: 16px;
 }
 
 main a {
