--- a/country/main.css
+++ b/country/main.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Bellota&family=Rubik+Mono+One&family=Ruslan+Display&family=Stalinist+One&display=swap');
+@import url("/russia/fonts/roboto/stylesheet.css");
 header {
     color: white;
     background-color: #155a15;
@@ -9,7 +10,9 @@ header {
     justify-content: space-around;
     align-items: center;
     flex-wrap: wrap;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: 'Yandex Sans Display';
+    font-weight: bold;
+    font-style: normal;
 }
 
 .info {
